@@ -17,6 +17,18 @@ class sample_getter {
 		virtual ~sample_getter() { } ;
 };
 
+#define DEFINE_GETTER(name, CODE_BLOCK)				\
+class name : public sample_getter {				\
+	Sample_Data *data_ptr;					\
+	public:							\
+		name(Sample_Data *data) { 			\
+			data_ptr = data;			\
+		}						\
+		virtual void operator()(float *output) 		\
+			CODE_BLOCK				\
+		virtual ~name() { };				\
+}
+
 void mix_sample(Resampler::Mix_Data *mixdata, sample_getter *get_sample, bool perform_filtering);
 
 #endif
